--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(GTest REQUIRED)
 
 # Add a test executable
 add_executable(tests
-        gtest_main.cpp gtest_Vect3d.cpp)
+        gtest_main.cpp gtest_Vect3d.cpp gtest_GeneralCircle.cpp gtest_Circle.cpp gtest_GeneralEllipse.cpp gtest_Ellipse.cpp gtest_Helix.cpp)
 
 # Link the test executable with Google Test
 target_compile_options(tests PRIVATE --coverage)
